--- a/public/signin.html
+++ b/public/signin.html
@@ -59,13 +59,15 @@
     <div class="container">
         <h2>Sign In</h2>
         <form action="/api/auth/sign-in" method="POST">
-            <input type="email" name="email" placeholder="Email" required>
-            <input type="password" name="password" placeholder="Password" required>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="Email" required>
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" placeholder="Password" required>
             <button type="submit">Sign In</button>
         </form>
         <div class="link">
-            <a href="/auth/sign-up">Don't have an account? Sign Up</a>
+            <a href="/signup.html">Don't have an account? Sign Up</a>
         </div>
     </div>
 </body>
-</html>
+</html>`
